* Resetting a file uploading form after sending a file

--- a/thankyou/webapp/templates/image-uploading-page.html
+++ b/thankyou/webapp/templates/image-uploading-page.html
@@ -11,7 +11,7 @@
     <div id="success-message" class="alert alert-success" role="alert">
         The image was successfully uploaded! Please, return to Slack to publish your "Thank you" message
     </div>
-    <form class="my-form">
+    <form id="my-form" class="my-form">
         <p>Upload an image with the file dialog or by dragging and dropping onto the dashed region</p>
         <input type="file" id="fileElem" accept="image/*" onchange="handleFiles(this.files)">
         <label class="button btn btn-primary" for="fileElem">Select a file</label>
